@@ -93,6 +93,7 @@
   [patch #3782] modernize <stdint.h>
   [patch #3912] Fix ctype.S linker error due to asm branches out
                 of range
+  [patch #3925] Dallas iButton 8-bit CRC
   [patch #4087] C99 conformal headers stdint.h and inttypes.h
   [patch #4505] Unified interrupt vector names in header files
   [patch #4608] rpm spec file update
